# eeglab_MCP

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  README.zh-CN.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  scorecard-analysis.yml
configs/: README.md  claude_desktop_config.json  codex.config.toml  vscode.mcp.json
docs/: figure-atlas.md  homepage-session-order.md  official-gate-policy.md  official-method-map.md  official-plugin-map.md  official-report-field-matrix.md  official-risk-matrix.md  official-support-matrix.md  official-tool-support-matrix.md  official-topic-index.md  research-standard.md  user-workflows.md
eeglab_mcp_server/: README.md  __init__.py  backend.py  evals.xml  handler_registry.py  handlers_data.py  handlers_events_erp.py  handlers_frequency_timefreq.py  handlers_ica_artifact.py  handlers_preprocessing.py  handlers_source.py  handlers_study.py  handlers_visualization.py  handlers_workflow.py  matlab_literals.py  mcp_config.json  mcp_surfaces.py  official_alignment.py  pyproject.toml  runtime.py  schemas.py  server.py  start_eeglab_mcp.bat  tool_definitions.py  tool_registry.py  workflows.py
eeglab_mcp_server/tools/: __init__.py
scripts/: __init__.py  doctor_eeglab_agent.ps1  eeglab_agent.ps1  generate_eeg_report.py  report_template.json  setup_eeglab_agent.ps1  verify_eeglab_agent.ps1  verify_framework.py  verify_official_alignment.py
scripts/advanced_figures/: README.md  __init__.py  __main__.py  catalog.py  connectivity.md  connectivity_gallery.py  erp.md  erp_gallery.py  erpimage.md  erpimage_gallery.py  ica.md  ica_gallery.py  resting.md  resting_gallery.py  source.md  source_gallery.py  study.md  study_gallery.py  timefreq.md  timefreq_gallery.py
skills/eeglab-analysis/: SKILL.md
skills/eeglab-analysis/agents/: openai.yaml
skills/eeglab-analysis/docs/: official-gate-policy.md  official-method-map.md  official-plugin-family-catalog.md  official-plugin-map.md  official-report-field-matrix.md  official-risk-matrix.md  official-support-matrix.md  official-tool-support-matrix.md  official-topic-index.md  research-standard.md  user-workflows.md
skills/eeglab-analysis/references/: setup.md  (+17 more)
(+7 files in other folders)
