[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eeglab-mcp-server"
version = "1.0"
license = { text = "Apache-2.0" }
description = "MATLAB EEGLAB EEG analysis MCP stdio server with stable EEGLAB tools, research workflows, and official preflight gates."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]
authors = [{ name = "EEGLAB MCP maintainers" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = ["black>=24.0", "mypy>=1.8", "ruff>=0.5"]

[project.scripts]
eeglab-mcp-server = "eeglab_mcp_server.server:run_main"

[tool.setuptools]
package-dir = { "" = ".." }
packages = ["eeglab_mcp_server", "eeglab_mcp_server.tools"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E722", "F401", "F821", "F841"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = false
warn_unused_ignores = true
allow_redefinition = true
disable_error_code = ["arg-type", "assignment", "import-not-found", "no-redef", "union-attr", "var-annotated"]
